--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -25,8 +25,10 @@
           Categorias
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Crear</a>
-          <a class="dropdown-item" href="#">Listar</a>                    
+          <%= link_to "Crear", new_category_path, class: "dropdown-item" %>
+          <!--<a class="dropdown-item" href="#">Crear</a>-->
+          <%= link_to "Listar", categories_path, class: "dropdown-item" %>
+          <!--<a class="dropdown-item" href="#">Listar</a>-->                   
         </div>
       </li>
       <li class="nav-item dropdown">
